# nitime_install_test

./: README.md  pyproject.toml
.github/workflows/: test.yml
nitime_install_test/data/: README.md
